--- a/module-admin/src/main/resources/templates/member/view.html
+++ b/module-admin/src/main/resources/templates/member/view.html
@@ -16,7 +16,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-block-small">
-                        <form id="searchForm" name="searchForm">
+                        <form id="searchForm" name="searchForm" onsubmit="return false;">
                             <!-- 키워드 filter -->
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 mb-3">
@@ -65,7 +65,7 @@
 
                             <!-- 키워드 filter-btn -->
                             <div class="mt-1 p-t-20 text-center border-top">
-                                <button type="reset" class="btn btn-gray m-r-5">초기화</button>
+                                <button type="button" class="btn btn-gray m-r-5" id="searchInit">초기화</button>
                                 <button type="button" class="btn btn-primary" id="searchBtn">검색</button>
                             </div>
                         </form>
@@ -137,7 +137,7 @@
 
                 if (memberListTable != null) memberListTable.destroy();
                 this.selectedRow = [];
-
+                console.log($('#searchForm').serialize())
                 memberListTable = $('#memberListTable').DataTable({
                     select: {
                         selector: 'td:not(:first-child)',
@@ -235,12 +235,17 @@
                     dataType: 'html'
                 }).done(function (response) {
                     $('#contentPanel').html(response);
-                }).fail(function(error){
+                }).fail(function (error) {
                     alert('페이지를 불러오는데 실패하였습니다.');
                     console.log(JSON.stringify(error));
                 });
             }).on('click', '#sendMailBtn', function () {
 
+            }).on('click', '#searchBtn', function () {
+                memberController.init();
+            }).on('click','#searchInit', function(){
+                $('#searchKeyword, #searchType, #signupMethod, #memberStatus').val('');
+                $('select').niceSelect('update');
             });
 
             $('input[name=tableCheckbox]').on('change', function (e) {
