ongoing: 메일 발송 + 타임리프 추가

--- a/module-api/src/main/resources/templates/mail/emailtemp.html
+++ b/module-api/src/main/resources/templates/mail/emailtemp.html
@@ -13,8 +13,7 @@
         <did class="banner" style="width: auto;"><img class="bannerImg" src="banner.PNG" style="width: 30%; display: block; margin-left: auto; margin-right: auto; padding: 5%;"></did>
         <div class="content" style="border-bottom: 1px solid; border-color: #D9D9D9; margin-bottom: 3%; font-size: 1.0rem;">
             <p style="font-family: 'Pretendard Std Variable'; font-weight: 900;">
-                <span th:text="${name}"></span>님 새식일기의 가족이 된 것을 환영합니다.<br>
-                새식일기와 함께 새로운 식구를 만나고 따뜻한 일상을 기록해 보세요.
+                <th:block th:text="${message}"></th:block>
             </p>
             <input type="button" class="button" value="새식일기 &gt;" style="background-color: #FF8031; border-radius: 5px; border: none; text-align: center; font-size: 0.9rem; font-family: 'Pretendard Std Variable'; font-weight: 900; color: white; display: block; margin-left: auto; margin-right: auto; margin-bottom: 5%; width: 120px; height: 40px; padding: 10px;">
         </div>
