--- a/module-admin/src/main/resources/templates/member/tab/detail.html
+++ b/module-admin/src/main/resources/templates/member/tab/detail.html
@@ -23,6 +23,7 @@
             </div>
             <div class="col-lg-6 mb-3">
                 <div class="row form-group mb-3">
+                    <input type="hidden" id="prevNickname" name="prevNickname" th:value="*{nickname}">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="nickname"><strong>닉네임</strong></label>
                     <div class="col-sm-12">
                         <input type="text" class="form-control form-control-round" th:field="*{nickname}" >
@@ -111,7 +112,7 @@
                     }).done(function(response){
                         alert('수정되었습니다..');
                     }).fail(function(error){
-                        alert('수정에 실패했습니다.');
+                        alert(error.responseJSON.message);
                     })
                 }
             });
