--- a/module-admin/src/main/resources/templates/saesigManage/reportForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/reportForm.html
@@ -61,7 +61,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn btn-transparent m-r-5" data-bs-dismiss="modal"
-                        aria-label="Close">취소
+                        aria-label="Close">닫기
                 </button>
             </div>
         </div>
